--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
     <string name="location_permission">Location permission required</string>
     <string name="settings">Settings</string>
-    <string name="select_poi">Please select a point of interest</string>
+    <string name="err_select_poi">Please select a point of interest</string>
     <string name="geofence_entered">Geofence Entered</string>
     <string name="channel_name">GeofenceStatus</string>
     <string name="notification_channel_description">Geofence status notification</string>
@@ -37,6 +37,7 @@
     <string name="title">Title: %s</string>
     <string name="description">Description: %s</string>
     <string name="location">Location: %s</string>
+    <string name="reminder_details">Reminder Details: </string>
 
     <!-- Error strings -->
     <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
@@ -45,5 +46,5 @@
     <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
     <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
     <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
-    <string name="reminder_details">Reminder Details: </string>
+
 </resources>
